fixed gulp to only reload styles on change without vendors that take too much

--- a/css/main.css
+++ b/css/main.css
@@ -518,21 +518,21 @@
      box-shadow: 5px 5px 5px 0px rgba(50, 50, 50, 0.28);
      z-index: 1000;
      cursor: pointer;
-     transition: box-shadow 0.3s ease-in-out:
+     transition: box-shadow 0.3s ease-in-out;
  }
 
  .add-image-button:hover {
      -webkit-box-shadow: 4px 4px 5px 0px rgba(50, 50, 50, 0.28);
      -moz-box-shadow: 4px 4px 5px 0px rgba(50, 50, 50, 0.28);
      box-shadow: 4px 4px 5px 0px rgba(50, 50, 50, 0.28);
-     transition: box-shadow 0.3s ease-in-out:
+     transition: box-shadow 0.3s ease-in-out;
  }
 
  .add-image-button:active {
      -webkit-box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.28);
      -moz-box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.28);
      box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 0.28);
-     transition: box-shadow 0.3s ease-in-out:
+     transition: box-shadow 0.3s ease-in-out;
  }
 
  .documents-upload {
